finished report need to add figure captions and references

--- a/ref.bib
+++ b/ref.bib
@@ -1,24 +1,10 @@
-@Article{Chen:1988:IPP,
-  author =       "Pehong Chen and Michael A. Harrison",
-  title =        "Index Preparation and Processing",
-  journal =      j-SPE,
-  year =         "1988",
-  volume =       "19",
-  number =       "9",
-  pages =        "897--915",
-  month =        sep,
-  note =         "The {\LaTeX} text of this paper is included in the
-                 {\tt makeindex} software distribution.",
-}
-
-@Book{Kahaner:1989:NMS,
-  author =       "David Kahaner and Cleve Moler and Stephen Nash",
-  title =        "Numerical Methods and Software",
-  publisher =    pub-PH,
-  address =      pub-PH:adr,
-  year =         "1989",
-  ISBN =         "0-13-627258-4",
-  LCCN =         "TA345 .K341 1989",
-  pages =        "xii + 495",
-  bibdate =      "Wed Dec 15 10:35:43 1993",
+@article{delft,
+author = {Gerritsma, J and Onnink, R and Versluis, A},
+year = {1981},
+month = {12},
+pages = {276-286},
+title = {Geometry, resistance and stability of the Delft systematic yacht hull series1},
+volume = {28},
+journal = {International Shipbuilding Progress},
+doi = {10.3233/ISP-1981-2832801}
 }
